--- a/app.yaml
+++ b/app.yaml
@@ -8,5 +8,5 @@ handlers:
    upload: www/index.html
 
  - url: /(.*)
-   static_files: www/\1
-   upload: www/(.*)
+   static_files: www/index.html
+   upload: www/index.html
