--- a/app.yaml
+++ b/app.yaml
@@ -4,9 +4,9 @@ api_version: 1
 
 handlers:
  - url: /
-   static_files: www/index.html
-   upload: www/index.html
+   static_files: index.html
+   upload: index.html
 
  - url: /(.*)
-   static_files: www/index.html
-   upload: www/index.html
+   static_files: index.html
+   upload: index.html
